--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "clean-android": "rm -rf android/build android/app/build && cd android && ./gradlew clean && cd ..",
+    "clean-ios": "rm -rf ios/build ios/Pods ios/Podfile.lock",
+    "clean-watch": "watchman watch-del-all && watchman shutdown-server"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -24,8 +27,10 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
