--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,15 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "compilerOptions": {
+    "paths": {
+      "@components/*": ["./src/components/*"],
+      "@modules/*": ["./src/modules/*"],
+      "@config/*": ["./src/config/*"],
+      "@navigation/*": ["./src/navigation/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@utils/*": ["./src/modules/shared/domain/utils/*"]
+    }
+  },
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "exclude": ["node_modules", "**/Pods/**"]
 }
