--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "clean-watch": "watchman watch-del-all && watchman shutdown-server"
   },
   "dependencies": {
+    "@react-native-firebase/analytics": "^20.0.0",
+    "@react-native-firebase/crashlytics": "^20.0.0",
+    "@react-native-firebase/firestore": "^20.0.0",
+    "axios": "^1.7.2",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.74.1",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
